--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Andrew Matzureff - Shortfolio
 email: andrewmatzureff@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hi folks! This site is WIP at the moment.
-  For now feel free to check out my YouTube channel mentioned on the "About" page for random demos of various projects.
+  For now feel free to check out my YouTube channel linked on the "About" page for random demos of various projects.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: AndrewMatzureff
